finished basket page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -43,7 +43,7 @@
                     <%= dataBike[i].price %>€
                   </h4>
                   <a
-                    href="/shop?name=<%= dataBike[i].name %>&price=<%= dataBike[i].price %>&image=<%= dataBike[i].image %>"><button
+                    href="/shop?name=<%= dataBike[i].name %>&price=<%= dataBike[i].price %>&image=<%= dataBike[i].image %>&quantity=<%=dataBike[i].quantity%>"><button
                       type="button" class="btn btn-outline-primary">Buy</button></a>
                 </div>
 
