added strip pages

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,7 +19,7 @@
 
 
   <nav class="navbar navbar-light bg-dark">
-    <a class="navbar" href="index.html">
+    <a class="navbar" href="/">
       <img src="/images/bike-logo.svg" width="50" height="50" class="logo" alt="">
       The Bike Shop Experience
     </a>
