--- a/views/index.ejs
+++ b/views/index.ejs
@@ -21,7 +21,7 @@
   <nav class="navbar navbar-light bg-dark">
     <a class="navbar" href="/">
       <img src="/images/bike-logo.svg" width="50" height="50" class="logo" alt="">
-      The Bike Shop Experience
+      The Bike Shop
     </a>
   </nav>
   <div id="picture-header">
@@ -35,7 +35,7 @@
             <div class="bikeCard">
               <img src=<%=dataBike[i].image %> class="card-img-top" alt="Velo">
               <div class="card-body">
-                <h1 class="card-text">
+                <h1 class="card-text title-text">
                   <%= dataBike[i].name %>
                 </h1>
                 <div class="cardPrice">
