--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,5 +1,18 @@
 body {
   font-family: "Darker Grotesque", sans-serif;
+  background: linear-gradient(
+      to bottom,
+      rgba(255, 255, 255, 0.15) 0%,
+      rgba(0, 0, 0, 0.15) 100%
+    ),
+    radial-gradient(
+        at top center,
+        rgba(255, 255, 255, 0.4) 0%,
+        rgba(0, 0, 0, 0.4) 120%
+      )
+      #989898;
+  background-blend-mode: multiply, multiply;
+  height: 100vh;
 }
 
 a,
@@ -33,14 +46,29 @@ a:hover {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: rgb(35, 35, 35);
+  background-image: radial-gradient(73% 147%, #eadfdf 59%, #ece2df 100%),
+    radial-gradient(
+      91% 146%,
+      rgba(255, 255, 255, 0.5) 47%,
+      rgba(0, 0, 0, 0.5) 100%
+    );
+  background-blend-mode: screen;
+  color: black;
   border-radius: 2px;
   padding: 2px;
-  color: white;
-  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+  box-shadow: rgba(73, 78, 82, 0.921) 0px 8px 24px;
 }
 .cardPrice {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+.card-img-top {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+.title-text {
+  font-weight: 600;
+  opacity: 0.9;
 }
