--- a/views/shop.ejs
+++ b/views/shop.ejs
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link rel="stylesheet" href="/style.css">
+
   <link href="https://fonts.googleapis.com/css?family=Darker+Grotesque&display=swap" rel="stylesheet">
   <title>BikeShop - Shop</title>
   <script src="https://kit.fontawesome.com/a420c910a6.js" crossorigin="anonymous"></script>
@@ -21,7 +21,7 @@
   <nav class="navbar navbar-light bg-dark">
     <a class="navbar" href="/">
       <img src="/images/bike-logo.svg" width="50" height="50" class="logo" alt="">
-      The Bike Shop Experience
+      The Bike Shop
     </a>
   </nav>
 
